--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="row">
             <div class="col-md-12 text-center slogan">
 
-              <h1>HEALTHY</h1>
+              <h1>HEALTHY : This is a bootstrap3 test</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, <br/>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
             </div>
         </div>
